fix z-index stacking context issue

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -39,6 +39,7 @@ a {
 }
 
 button {
+  z-index: 1;
   cursor: pointer;
   background: none;
   color: white;
